# Conway

./: CMakeLists.txt  Conway.cpp  Conway.h  README.md  main.cpp  menu.cpp  menu.h  misc.cpp  misc.h  myMatrix.h  myMatrix.hpp
include/conio/: README.txt
